[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/characters/fox/fox.gd" type="Script" id=1]
[ext_resource path="res://src/characters/fox/fox_animator.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffolder/src/character/proximity_detector.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/surfacer/src/platform_graph/edge/models/movement_params.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/surfacer/src/character/behaviors/wander_behavior.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/surfacer/src/character/behaviors/collide_behavior.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/surfacer/src/character/behaviors/run_away_behavior.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 16 )

[sub_resource type="CircleShape2D" id=4]
radius = 96.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 48.0
height = 128.0

[node name="Fox" type="KinematicBody2D"]
collision_layer = 32
script = ExtResource( 1 )
character_name = "fox"
primary_annotation_color = Color( 1, 0.376471, 0.32549, 1 )
secondary_annotation_color = Color( 1, 1, 1, 1 )
navigation_annotation_color_override = Color( 0, 0, 0, 1 )
exclamation_mark_width_start = 4.0
exclamation_mark_length_start = 24.0
exclamation_mark_stroke_width_start = 1.2
exclamation_mark_duration = 1.8
exclamation_mark_throttle_interval = 1.0
logs_common_debugging_events = false
logs_custom_events = true
logs_behavior_events = false
logs_navigator_events = false
logs_collision_events = false
logs_surface_events = false
logs_action_events = false
logs_low_level_framework_events = false
logs_low_level_navigator_events = false

[node name="MovementParameters" parent="." instance=ExtResource( 4 )]
collider_shape = SubResource( 1 )
character_name = "fox"
__movement_params_identifier__ = "_"
walk_acceleration_multiplier = 0.88
in_air_horizontal_acceleration_multiplier = 1.28
jump_boost_multiplier = 1.11
max_horizontal_speed_default_multiplier = 1.25
max_distance_for_reachable_surface_tracking = 1024.0

[node name="FoxAnimator" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -5 )
scale = Vector2( -1, 1 )
animations = {
"ClimbDown": {
"name": "ClimbDown",
"speed": -4.03,
"sprite_name": "ClimbDown"
},
"ClimbUp": {
"name": "ClimbUp",
"speed": 9.4,
"sprite_name": "ClimbUp"
},
"JumpFall": {
"name": "JumpFall",
"speed": 1.0,
"sprite_name": "JumpFall"
},
"JumpRise": {
"name": "JumpRise",
"speed": 1.0,
"sprite_name": "JumpRise"
},
"Rest": {
"name": "Rest",
"speed": 0.8,
"sprite_name": "Rest"
},
"RestOnWall": {
"name": "RestOnWall",
"speed": 0.8,
"sprite_name": "RestOnWall"
},
"Walk": {
"name": "Walk",
"speed": 20.0,
"sprite_name": "Walk"
}
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MommaDetector" parent="." instance=ExtResource( 3 )]
shape = SubResource( 4 )
radius = 96.0
layer = 8

[node name="DucklingDetector" parent="." instance=ExtResource( 3 )]
rotation = 1.5708
shape = SubResource( 3 )
layer = 16

[node name="WanderBehavior" parent="." instance=ExtResource( 5 )]
is_active_at_start = true
max_distance_from_behavior_start_position = 256.0
min_pause_between_movements = 1.0
max_pause_between_movements = 3.0

[node name="CollideBehavior" parent="." instance=ExtResource( 6 )]
max_distance_from_behavior_start_position = 512.0
returns_to_character_start_position = true
returns_to_pre_behavior_position = false
min_pause_between_movements = 0.0
max_pause_between_movements = 0.0
min_pause_after_movements = 0.0
max_pause_after_movements = 0.0

[node name="RunAwayBehavior" parent="." instance=ExtResource( 7 )]
starts_with_a_jump = true
min_distance_from_target_to_stop_running = 198.0
